Annotation-driven template specialization with unified UTF-8 engine
Replace the code-generation engine architecture with an annotation-driven
bytecode specialization pipeline built on the JDK ClassFile API.

Engine architecture:
- Utf8EngineTemplate: readable Java template annotated with @Inline that
  serves as both C2 JIT fallback and compiled engine source
- TemplateTransformer: specializes templates via constant folding, private
  method inlining, loop unrolling, and dead code elimination
- BytecodeInliner: transplants @Inline static method bodies (Utf8Kernel)
  at call sites, producing flat inlined bytecode
- Utf8EngineBuilder: single entry point with .codepoints(), .codepoint(),
  .range() API and .compiled(true|false) toggle

Consolidation:
- Merge knownhosts-inline module into main modules (@Inline annotation →
  libfindchars-api, bytecode transforms → compiler/inline/ subpackage)
- Remove old engine: EngineCodeGen, Utf8EngineCodeGen, FindCharsEngine,
  Utf8FindCharsEngine, ShuffleMaskOp, EngineBuilder, all experiments/
- Remove unused abstractions: Literal/LiteralGroup interfaces, FindMask,
  MatchDecoder, EngineKernel, RangeOperation, Utf8DataGenerator
- Simplify benchmarks (~200 lines → 30 lines via builder API)

Test coverage:
- Add RegexParityTest validating exact match parity on real + synthetic data
- Add Utf8EngineTest with thorough multi-byte coverage (2/3/4-byte chars,
  boundary spanning, shared lead bytes)
- 28 test methods across 5 test classes

Net: -4932 lines, +2052 lines across 68 files.